--- a/www/templates/tab-explore.html
+++ b/www/templates/tab-explore.html
@@ -1,6 +1,6 @@
 
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Map</h1>
+      <h1 class="title">Explore Parkings</h1>
     </ion-header-bar>
 
     <ion-content scroll="false">
@@ -13,6 +13,6 @@
       <map on-create="mapCreated(map)"></map>
     </ion-content>
 
-    <ion-footer-bar class="bar-stable">
+  <!--  <ion-footer-bar class="bar-stable">
       <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate"></a>
-    </ion-footer-bar>
+    </ion-footer-bar> -->
