--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,25 +1,20 @@
-<!-- 
-  Create tabs with an icon and label, using the tabs-positive style. 
-  Each tab's child <ion-nav-view> directive will have its own 
-  navigation history that also transitions its views in and out.
--->
 <ion-tabs class="tabs-icon-top">
 
 
-  <!-- Pets Tab -->
-  <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <!-- Explore Tab -->
+  <ion-tab title="Explore" icon="icon ion-map" href="#/tab/explore">
+    <ion-nav-view name="tab-explore"></ion-nav-view>
   </ion-tab>
 
 
-  <!-- Adopt Tab -->
-  <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
+  <!-- Add Listing Tab -->
+  <ion-tab title="Add Listing" icon="icon ion-plus" href="#/tab/add-listing">
+    <ion-nav-view name="tab-add-listing"></ion-nav-view>
   </ion-tab>
 
 
-  <!-- About Tab -->
-  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
+  <!-- Account Tab -->
+  <ion-tab title="Account" icon="icon ion-person" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
