Added current location on load and find me button

--- a/www/templates/tab-explore.html
+++ b/www/templates/tab-explore.html
@@ -7,7 +7,7 @@
         <div class="list list-inset">
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
-                <input type="text" placeholder="Search" id="mapSearch">
+                <input type="text" placeholder="Locality or Landmark" id="mapSearch">
             </label>            
         </div>
       <map on-create="mapCreated(map)"></map>
