Added new explore view

--- a/www/templates/tab-add-listing.html
+++ b/www/templates/tab-add-listing.html
@@ -1,6 +1,6 @@
 
   <ion-view title="Add Listing">
-    <ion-content scroll="false" has-header="true">
+    <ion-content scroll="true" has-header="true">
     <form name="addListing" novalidate ng-submit="continue()">
         <div class="list list-inset">
 	  <div class="item item-input item-select">
