added fb login button and plugin

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,7 +1,7 @@
 <ion-view title="Account">
 
     <ion-content scroll="false">
-        
+			<button class="button" ng-click="login()">Login</button>
     </ion-content>
 </ion-view>
     
